✨ feat(price): add new vision model pricing for glm-4.6v and glm-4.6v-flash
- add pricing details for new vision model glm-4.6v with input/output rates and cached token pricing
- add free pricing tier for glm-4.6v-flash model
- 【feat】add new model pricing
- 【price】update Zhipu model price list

--- a/manual_prices/Zhipu.yaml
+++ b/manual_prices/Zhipu.yaml
@@ -67,6 +67,14 @@ models:
       output: 0
 
     # vision
+    glm-4.6v:
+      input: 2 rmb / M # use prices for 32~128k tokens
+      output: 6 rmb / M
+      extra_ratios:
+        - cached_tokens: 0.4 rmb / M
+    glm-4.6v-flash:
+      input: 0
+      output: 0
     glm-4.5v:
       input: 4 rmb / M # use prices for 32~64k tokens
       output: 12 rmb / M
