--- a/manual_prices/字节火山.yaml
+++ b/manual_prices/字节火山.yaml
@@ -6,7 +6,7 @@ models:
     # 豆包大模型1.8 (最新)
     doubao-seed-1.8*: # function call enabled
       aliases:
-        - doubao-seed-1-8*
+        - doubao-seed-1-8-202*
       # 阶梯计价：0-32K: 0.8元/M输入，8元/M输出
       # 32K-128K: 1.2元/M输入，16元/M输出
       # 128K-256K: 2.4元/M输入，24元/M输出
