--- a/manual_prices/Zhipu.yaml
+++ b/manual_prices/Zhipu.yaml
@@ -3,6 +3,11 @@ models:
 
   Zhipu:
     # llm
+    glm-4.7:
+      input: 4 rmb / M # 取32k-128k的价格，最为常用
+      output: 16 rmb / M
+      extra_ratios:
+        - cached_tokens: 0.8 rmb / M
     glm-4.6:
       input: 4 rmb / M # 取32k-128k的价格，最为常用
       output: 16 rmb / M
