--- a/manual_prices/MiniMax.yaml
+++ b/manual_prices/MiniMax.yaml
@@ -1,8 +1,26 @@
 models:
   MiniMax:
-    # https://platform.minimaxi.com/document/Price?key=66701c7e1d57f38758d5818c
+    # 模型定价：https://platform.minimaxi.com/docs/pricing/pay-as-you-go
+
+    # M2系列 - 专为高效编码与Agent工作流而生
     MiniMax-M2:
       aliases:
         - MiniMax-M2-Stable
-      input: 2.1 rmb / M # 取32k-128k的价格，最为常用
-      output: 8.4 rmb / M # 取32k-128k的价格，最为常用
+      input: 2.1 rmb / M
+      output: 8.4 rmb / M
+      extra_ratios:
+        - cached_tokens: 0.21 rmb / M
+
+    # M2.1系列 - 强大多语言编程实力，全面升级编程体验
+    MiniMax-M2.1:
+      input: 2.1 rmb / M
+      output: 8.4 rmb / M
+      extra_ratios:
+        - cached_tokens: 0.21 rmb / M
+
+    # M2.1 Lightning - 高效高速Agent模式（M2.1极速版），适用于对话问答、轻量搜索、简单编码任务
+    MiniMax-M2.1-Lightning:
+      input: 2.1 rmb / M
+      output: 16.8 rmb / M # 极速版输出价格为普通版2倍
+      extra_ratios:
+        - cached_tokens: 0.21 rmb / M
