✨ feat(manual_prices): update Xiaomi MIMO pricing model
- update mimo-v2-flash model pricing from 0 to actual rates
- set input price to 0.7 rmb / M and output price to 2.1 rmb / M
- align pricing with official Xiaomi MIMO platform documentation

--- a/manual_prices/Xiaomi MIMO.yaml
+++ b/manual_prices/Xiaomi MIMO.yaml
@@ -3,5 +3,5 @@ models:
     # 模型价格：https://platform.xiaomimimo.com/#/docs/pricing
 
     mimo-v2-flash:
-      input: 0
-      output: 0
+      input: 0.7 rmb / M
+      output: 2.1 rmb / M
