--- a/manual_prices/Baidu.yaml
+++ b/manual_prices/Baidu.yaml
@@ -1,49 +1,63 @@
 models:
+  # Pricing link: https://cloud.baidu.com/doc/qianfan/s/wmh4sv6ya
+  # Last updated: 2026-01-15
   Baidu:
-    # ernie-4.5
+    # ERNIE 5.0 系列
+    ernie-5.0-thinking:
+      aliases:
+        - ernie-5.0-thinking-preview
+        - ernie-5.0-thinking-latest
+        - ernie-5.0-thinking-exp
+      input: 0.01 rmb / K # 32k < 输入 <= 128k
+      output: 0.04 rmb / K # 32k < 输入 <= 128k
+      # 注: 输入<=32k 时 input: 0.006, output: 0.024
+
+    # ERNIE 4.5 系列
     ernie-4.5-turbo:
       aliases:
         - ernie-4.5-turbo-128k-preview
-        - ernie-4.5-turbo-32k
         - ernie-4.5-turbo-128k
+        - ernie-4.5-turbo-32k
+        - ernie-4.5-turbo-latest
       input: 0.0008 rmb / K
       output: 0.0032 rmb / K
+      extra_ratios:
+        - cached_tokens: 0.0002 rmb / K
+
     ernie-4.5-turbo-vl:
       aliases:
+        - ernie-4.5-turbo-vl-preview
+        - ernie-4.5-turbo-vl
         - ernie-4.5-turbo-vl-32k
         - ernie-4.5-turbo-vl-32k-preview
+        - ernie-4.5-turbo-vl-latest
       input: 0.003 rmb / K
       output: 0.009 rmb / K
-    ernie-4.5: # deprecation scheduled 06/26/2025
-      aliases: ernie-4.5-8k-preview
+      extra_ratios:
+        - cached_tokens: 0.00075 rmb / K
+
+    ernie-4.5-8k:
       input: 0.004 rmb / K
       output: 0.016 rmb / K
+      # 注: 搜索增强触发 0.004 rmb/次
 
-    # ERNIE-4.5-VL-28B-A3B
     ernie-4.5-vl-28b-a3b:
-      input: 0
-      output: 0
-    # ERNIE-4.5-21B-A3B
-    ernie-4.5-21b-a3b:
-      input: 0
-      output: 0
-    # ERNIE-4.5-0.3B
-    ernie-4.5-0.3b:
-      input: 0
-      output: 0
-
-    # 推理模型
-    ernie-x1-turbo:
-      aliases:
-        - ernie-x1-turbo-32k
-        - ernie-x1-turbo-32k-preview
       input: 0.001 rmb / K
       output: 0.004 rmb / K
-    ernie-x1: # deprecation scheduled 06/26/2025
-      aliases:
-        - ernie-x1-32k-preview
-      input: 0.002 rmb / K
-      output: 0.008 rmb / K
+
+    ernie-4.5-0.3b:
+      input: 0.0001 rmb / K
+      output: 0.0004 rmb / K
+
+    ernie-4.5-21b-a3b-thinking:
+      input: 0.0005 rmb / K
+      output: 0.002 rmb / K
+
+    ernie-4.5-21b-a3b:
+      input: 0.0005 rmb / K
+      output: 0.002 rmb / K
+
+    # ERNIE 4.0 系列
     ernie-4.0-turbo:
       aliases:
         - ernie-4.0-turbo-128k
@@ -54,26 +68,38 @@ models:
       input: 0.003 rmb / K
       output: 0.009 rmb / K
 
-    # 免费模型
+    # ERNIE Speed/Lite/Tiny 系列
+    ernie-speed-pro-128k:
+      input: 0.0003 rmb / K
+      output: 0.0006 rmb / K
+
+    ernie-lite-pro-128k:
+      input: 0.0002 rmb / K
+      output: 0.0004 rmb / K
+
     ernie-speed:
       aliases:
         - ernie-speed-128k
         - ernie-speed-8k
+      input: 0 rmb / K
+      output: 0 rmb / K
+
+    ernie-lite:
+      aliases:
         - ernie-lite-8k
-        - ernie-lite-128k-0722
+      input: 0 rmb / K
+      output: 0 rmb / K
+
+    ernie-tiny:
+      aliases:
         - ernie-tiny-8k
-        - ernie-tiny-128k-0929
-      input: 0
-      output: 0
+      input: 0 rmb / K
+      output: 0 rmb / K
 
-    llama-4-maverick:
+    ernie-char:
       aliases:
-        - llama-4-maverick-17b-128e-instruct
-      input: 0.007 rmb / K
-      output: 0.021 rmb / K
-
-    llama-4-scout:
-      aliases:
-        - llama-4-scout-17b-16e-instruct
-      input: 0.006 rmb / K
-      output: 0.018 rmb / K
+        - ernie-character
+        - ernie-char-8k
+        - ernie-char-fiction-8k
+      input: 0.0003 rmb / K
+      output: 0.0006 rmb / K
