🐛 fix(manual_prices): correct model provider configuration in yaml files
- swap ollama and vLLM configurations between files to fix incorrect provider assignments
- ensure ollama models are configured in ollama.yaml with ollama:* pattern
- ensure vLLM models are configured in vLLM.yaml with vllm:* pattern

--- a/manual_prices/ollama.yaml
+++ b/manual_prices/ollama.yaml
@@ -1,6 +1,6 @@
 models:
-  vLLM:
-    # models deployed with vllm
-    vllm:*:
+  ollama:
+    # models deployed with ollama
+    ollama:*:
       input: 0
       output: 0
