--- a/manual_prices/vLLM.yaml
+++ b/manual_prices/vLLM.yaml
@@ -1,6 +1,6 @@
 models:
-  ollama:
-    # models deployed with ollama
-    ollama:*:
+  vLLM:
+    # models deployed with vllm
+    vllm:*:
       input: 0
       output: 0
