✨ feat(Zhipu): add glm-4.7-flash model pricing
- add input and output pricing for glm-4.7-flash model
- set both input and output costs to 0

--- a/manual_prices/Zhipu.yaml
+++ b/manual_prices/Zhipu.yaml
@@ -36,6 +36,9 @@ models:
     glm-4.5-flash:
       input: 0
       output: 0
+    glm-4.7-flash:
+      input: 0
+      output: 0
 
     glm-4-plus:
       input: 5 rmb / M
