--- a/manual_prices/阿里云百炼.yaml
+++ b/manual_prices/阿里云百炼.yaml
@@ -379,18 +379,18 @@ models:
 
     qwen-vl-max:
       aliases: qwen-vl-max-latest
-      input: 0.003 rmb / K
-      output: 0.009 rmb / K
+      input: 0.0016 rmb / K # 2025-08-13后降价为1.6元/M
+      output: 0.004 rmb / K # 2025-08-13后降价为4元/M
       extra_ratios:
-        - input_image_tokens: 0.003 rmb / K # 图像输入与文本输入同价
+        - input_image_tokens: 0.0016 rmb / K # 图像输入与文本输入同价
         - cached_tokens: 0.2
 
     qwen-vl-plus:
       aliases: qwen-vl-plus-latest
-      input: 0.0015 rmb / K
-      output: 0.0045 rmb / K
+      input: 0.0008 rmb / K # 2025-08-15后降价为0.8元/M
+      output: 0.002 rmb / K # 2025-08-15后降价为2元/M
       extra_ratios:
-        - input_image_tokens: 0.0015 rmb / K # 图像输入与文本输入同价
+        - input_image_tokens: 0.0008 rmb / K # 图像输入与文本输入同价
         - cached_tokens: 0.2
 
     # qwen-coder
